Fix some layout issues

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,7 +38,7 @@
 }
 
 .footer {
-    padding: 3rem 1.5rem;
+    padding: 1.5rem;
     position: fixed;
     width: 100%;
     bottom: 0;
